# i-smile.ai

./: .gitignore  BUSINESS_STRATEGY.md  Cargo.toml  Dockerfile  README.md
_ai/: F0010.md  aiad_global_ai_flow.drawio
src/: main.rs
static/: about.html  contact.html  index.html  pricing.html  script.js  services.html  styles.css
